promotion updates: shift to a more EST timezone for promotions; bugfixes for the promo form; fix unapproved logic; get rid of disappearing promo bugs

--- a/r2/r2/public/static/css/reddit-ie7-hax.css
+++ b/r2/r2/public/static/css/reddit-ie7-hax.css
@@ -3,5 +3,5 @@
     height: 17px;
 }
 
-.score { display: inline;  }
-div.score { display: block; }
+.entry.unvoted .score.unvoted { display: inline;  }
+.entry.unvoted div.score.unvoted { display: inline;  }
